# XLLuau

./: .gitignore  Cargo.toml  README.md
XLpkg/: README.md
docs/: README.md  feature-status.md  getting-started.md  language-tour.md  tooling.md
docs/guides/: bindings.md  control-flow.md  expressions.md  modules.md  objects-and-tasks.md  patterns-and-readonly.md  signals-and-state.md  type-system.md
docs/reference/: cli.md  config.md  source-maps.md  transpilation.md
src/: ast.rs  compiler.rs  config.rs  emitter.rs  formatter.rs  lexer.rs  lib.rs  main.rs  module.rs  package_manager.rs  parser.rs  source_map.rs
tests/: README.md  module_projects.rs  package_projects.rs  projects.rs
tests/module_projects/custom_alias/: expected.luau  xluau.config.json
tests/module_projects/cycle/: xluau.config.json
tests/module_projects/filesystem_alias_index/: expected.luau  xluau.config.json
tests/module_projects/roblox_alias/: expected.luau  xluau.config.json
tests/module_projects/task_roblox_adapter/: expected.luau  xluau.config.json
tests/package_projects/json_consumer/: expected.luau  packages.luau  xluau.config.json
tests/projects/all_features/: expected.luau  main.xl
tests/projects/all_features_phase5/: expected.luau  main.xl
tests/projects/all_features_phase6/: expected.luau  main.xl
tests/projects/all_features_phase7/: expected.luau  main.xl
tests/projects/const_destructure/: expected.luau  main.xl
tests/projects/mixed_features/: main.xl  (+1 more)
vscode/xluau-vscode/: README.md  extension.js  language-configuration.json  package-lock.json  package.json
(+27 files in other folders)
